# gmb-api

./: pyproject.toml
gmb_api/: auth.py  resources.py  schema.py
tests/: test_gmb_api.py
