[tool.poetry]
name = "gmb-api"
version = "2.0.0"
description = ""
authors = ["bradi <bradisbon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
oauth2client = "^4.1.3"
google-auth-oauthlib = "^0.4.4"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
